removed portfolios, swapped out headings

--- a/kinetix-cargo.html
+++ b/kinetix-cargo.html
@@ -90,20 +90,18 @@
 
 
 
-    <section id="services">
-        <div class="container">
-            <div class="row sr-icons">
+    <section id="services" style="background-color: rgb(220, 237, 249);">
+        <div class="container-fluid">
+            <div class="row-fluid sr-icons">
                 <div class="col-xs-12 text-center">
-                    <h1 class="section-heading">At Your Service</h1>
-                    <hr class="primary">
-                    <p class=" ">Kinetix International is an experienced project logistics and global mobility company with core competencies in the areas of Domestic & International Household Goods Moving, Cargo & Logistics Sourcing and Corporate Relocation Management.</p>
+                    <h2 class=" ">Kinetix International is an experienced project logistics and global mobility company with core competencies in the areas of Domestic & International Household Goods Moving, Cargo & Logistics Sourcing and Corporate Relocation Management.</h2>
                 </div>
             </div>
         </div>
 
     </section>
 
-    <section id="portfolio">
+    <!-- <section id="portfolio">
         <div class="container-fluid no-padding">
             <div class="row-fluid no-padding sr-icons">
                 <div class="no-padding col-md-4 col-xs-12 ">
@@ -154,7 +152,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <div>
 
     </div>
@@ -164,13 +162,17 @@
                 <div class="col-md-12 text-center">
                     <h1 class="section-heading">Project Logistics</h1>
                     <hr class="primary">
-                    <p>
+                    <h3>
                         Kinetix International Logistics Project Cargo and Logistics division specializes in the design and implementation of freight forwarding, warehousing and supply chain management solutions for US government agencies and their contractors operating in developing
                         countries.
-                    </p>
+                    </h3>
                 </div>
             </div>
+
         </div>
+
+        <br />
+        <br />
         <div class="container-fluid">
             <div class="row-fluid sr-icons">
               <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
@@ -241,13 +243,15 @@
                 <div class="col-md-12 text-center">
                     <h1 class="section-heading">Mobilizations</h1>
                     <hr class="primary">
-                    <p>
+                    <h3>
                         Kinetix International Logistics’ Household Goods Management Division specializes in the design and delivery of innovative transportation programs for Fortune 500 and emerging growth corporations, NGO’s and governmental agencies and third party relocation
                         management companies worldwide.
-                    </p>
+                    </h3>
                 </div>
             </div>
         </div>
+        <br />
+        <br />
         <div class="container-fluid">
             <div class="row-fluid sr-icons">
               <div class="col-xs-12 col-sm-3 text-center">
@@ -300,15 +304,17 @@
                 <div class="col-md-12 text-center">
                     <h1 class="section-heading">Supply Chain</h1>
                     <hr class="primary">
-                    <p>
+                    <h3>
                         Let our logistics team be your supply chain one-stop-shop; pre-planning, scheduling, managing carriers, equipment, warehousing, delivery notification, inventory tracking, 3rd party coordination, set-up, installation, tear-down, disposal, distribution,
                         and single billing source – for all your cargo moving locally, long distance or internationally.
-                    </p>
+                    </h3>
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row">
+        <br />
+        <br />
+        <div class="container-fluid">
+            <div class="row-fluid">
                 <div class="col-sm-3 col-xs-12 text-center ">
                     <div class="service-box">
                       <img class="img-responsive img center-block" src="img/png-icons/Database.png">
