--- a/kinetix-relocation.html
+++ b/kinetix-relocation.html
@@ -90,23 +90,21 @@
 
 
 
-    <section id="services">
+    <section id="services" style="background-color: rgb(220, 237, 249);">
         <div class="container">
             <div class="row sr-icons">
                 <div class="col-xs-12 text-center">
-                    <h1 class="section-heading">At Your Service</h1>
-                    <hr class="primary">
-                    <p>Kinetix International is an experienced supply chain management and logistics company with core competencies in the areas of Corporate Relocation Management, Domestic & International Household Goods and Moving, and Cargo & Logistics
-                        Sourcing.</p>
+                    <h2>Kinetix International is an experienced supply chain management and logistics company with core competencies in the areas of Corporate Relocation Management, Domestic & International Household Goods and Moving, and Cargo & Logistics
+                        Sourcing.</h2>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="portfolio">
-        <div class="container-fluid">
+    <!-- <section id="portfolio">
+        <div class="container-fluid no-padding sr-icons">
             <div class="row-fluid no-padding">
-                <div class="no-padding col-md-6 col-xs-12 ">
+                <div class="col-md-6 col-xs-12 no-padding">
                     <a href="#projectLogistics" class="portfolio-box page-scroll">
                         <img src="img\commericalRelocation\conference_room_thumb.jpeg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -121,9 +119,9 @@
                     </a>
                 </div>
 
-                <div class="no-padding col-md-6 col-xs-12">
+                <div class="col-md-6 col-xs-12 no-padding">
                     <a href="#mobilizations" class="portfolio-box page-scroll">
-                        <img src="img\householdGoods\living-room-thumb.jpg" class="img-responsive" alt="">
+                        <img src="img\householdGoods\living-room.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption" style="background: rgba(254, 123, 7, 0.9);">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -139,7 +137,7 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
     <div>
 
     </div>
@@ -149,13 +147,15 @@
                 <div class="col-xs-12 text-center">
                     <h1 class="section-heading">Corporate Relocation</h1>
                     <hr class="primary">
-                    <p>
+                    <h3>
                         Kinetix Relocation specializes in the design and delivery of innovative programs for corporations of all sizes. Whether our clients transfer the occasional new hire or have a mature program that relocates senior executives on a regular basis, Kinetix
                         is prepared to deliver a best in class process to ensure a smooth and cost effective move anywhere in the world.
-                    </p>
+                    </h3>
                 </div>
             </div>
         </div>
+        <br />
+        <br />
         <div class="container-fluid">
             <div class="row-fluid sr-icons">
                 <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
@@ -230,13 +230,15 @@
                 <div class="col-md-12 text-center">
                     <h1 class="section-heading">Household Goods</h1>
                     <hr class="primary">
-                    <p>
+                    <h3>
                         Kinetix International Logistics’ Household Goods Management Division specializes in the design and delivery of innovative transportation programs for Fortune 500 and emerging growth corporations, NGO’s and governmental agencies and third party relocation
                         management companies worldwide.
-                    </p>
+                    </h3>
                 </div>
             </div>
         </div>
+        <br />
+        <br />
         <div class="container-fluid">
             <div class="row-fluid sr-icons">
               <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
