--- a/corporate-relocation.html
+++ b/corporate-relocation.html
@@ -69,16 +69,17 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header>
-        <div class="header-content">
+
+    <header id="corporate-relocation-page-header" class="bg-overlay">
+      <div class="bg-overlay">
+        <div class="header-content ">
             <div class="header-content-inner">
-                <h1 id="homeHeading" class="animated fadeInDown" style="font-weight: 100">Corporate Relocation</h1>
-                <hr>
+              <h1 id="homeHeading" class="animated fadeInDown" style="font-weight: 500">Corporate Relocation</h1>
+              <h2 class="animated fadeInDelay" style="font-weight: 100">Focus on your work, not on your move.</h2>
                 <a href="#services" class="page-scroll fa fa-4x fa-angle-double-down animated fadeIn pulse infinite"></a>
-
-
             </div>
         </div>
+      </div>  <!-- overlay -->
     </header>
 
     <section class="bg-primary" id="services">
@@ -115,14 +116,14 @@
         </div>
 
         <div class="container-fluid">
-            <div class="row">
+            <div class="row-fluid">
                 <div class="col-md-12 text-center">
                     <h1>Consultation & Financial Services</h1>
                 </div>
 
             </div>
             <hr>
-            <div class="row">
+            <div class="row-fluid">
                 <div class="col-md-4 text-center">
                     <div class="">
                         <h3>Policy Review, Design & Construction</h3>
@@ -212,13 +213,13 @@
         <div class="corporate-relocation-1-sub"></div>
 
         <div class="container-fluid">
-            <div class="row">
+            <div class="row-fluid">
                 <div class="col-md-12 text-center">
                     <h1>Domestic Services Portfolio</h1>
                 </div>
             </div>
             <hr>
-            <div class="row">
+            <div class="row-fluid">
                 <div class="col-md-3 text-center">
                     <h3>Home Sale Programs</h3>
                     <div class="btn">
