--- a/household-goods.html
+++ b/household-goods.html
@@ -69,16 +69,16 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header>
-        <div class="header-content">
+    <header id="household-goods-page-header" class="bg-overlay">
+      <div class="bg-overlay">
+        <div class="header-content ">
             <div class="header-content-inner">
-                <h1 id="homeHeading" class="animated fadeInDown" style="font-weight: 100">Household Goods Transport</h1>
-                <hr>
-                <a href="#services" class="page-scroll fa fa-4x fa-angle-double-down animated fadeIn pulse infinite"></a>
-
-
+              <h1 id="homeHeading" class="animated fadeInDown" style="font-weight: 500">Household goods transport</h1>
+              <h2 class="animated fadeInDelay" style="font-weight: 100">IT DOESN'T HAVE TO BE STRESSFUL.</h2>
+                <a  href="#services" class="page-scroll fa fa-4x fa-angle-double-down animated fadeIn pulse infinite household-goods-color"></a>
             </div>
         </div>
+      </div>  <!-- overlay -->
     </header>
 
     <section class="bg-primary" id="services">
