--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
             <hr>
             <div class="row">
-                <div class="col-md-12 text-center">
+                <div class="col-md-12 text-center animated rotateIn">
                     <img class="img-responsive center-block" src="img/png-icons/Home.png">
                 </div>
                 <div class="col-md-12 text-center">
@@ -137,7 +137,7 @@
             </div>
             <hr>
             <div class="row">
-                <div class="col-md-12 text-center">
+                <div class="col-md-12 text-center animated rotateIn">
                     <img class="img-responsive center-block" src="img/png-icons/Tools.png">
                 </div>
                 <div class="col-md-12 text-center">
