--- a/project-logistics.html
+++ b/project-logistics.html
@@ -69,14 +69,16 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header>
-        <div class="header-content">
+    <header id="project-logistics-page-header" class="bg-overlay">
+      <div class="bg-overlay">
+        <div class="header-content ">
             <div class="header-content-inner">
-                <h1 id="homeHeading" class="animated fadeInDown" style="font-weight: 100">Project Logistics Services</h1>
-                <hr>
-                <a href="#services" class="page-scroll fa fa-4x fa-angle-double-down animated fadeIn pulse infinite"></a>
+              <h1 id="homeHeading" class="animated fadeInDown" style="font-weight: 500">project logistics services</h1>
+              <h2 class="animated fadeInDelay" style="font-weight: 100">THE TOUGHEST JOBS, SIMPLIFIED</h2>
+                <a  href="#services" class="page-scroll fa fa-4x fa-angle-double-down animated fadeIn pulse infinite project-logistics-color"></a>
             </div>
         </div>
+      </div>  <!-- overlay -->
     </header>
 
     <section class="bg-primary" id="services">
