Added and Substituted PNG Icons

--- a/kinetix-cargo.html
+++ b/kinetix-cargo.html
@@ -176,7 +176,7 @@
         <div class="container-fluid">
             <div class="row-fluid sr-icons">
               <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
-                      <img class="img-responsive img center-block" src="img/png-icons/Bookmark.png">
+                      <img class="img-responsive img center-block" src="img/png-icons/StreetSigns.png">
                         <h3>Route Studies  Consultation</h3>
                         <p class="text-muted"></p>
                 </div>
@@ -198,12 +198,12 @@
 
                 </div>
                 <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
-                      <img class="img-responsive img center-block" src="img/png-icons/Download.png">
+                      <img class="img-responsive img center-block" src="img/png-icons/Data.png">
                         <h3>Reporting & Tracking System</h3>
                         <p class="text-muted"></p>
                 </div>
                 <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
-                      <img class="img-responsive img center-block" src="img/png-icons/Shopping.png">
+                      <img class="img-responsive img center-block" src="img/png-icons/Truck.png">
                         <h3>Last Mile Delivery</h3>
                         <p class="text-muted"></p>
                 </div>
@@ -255,17 +255,17 @@
         <div class="container-fluid">
             <div class="row-fluid sr-icons">
               <div class="col-xs-12 col-sm-3 text-center">
-                <img class="img-responsive img center-block" src="img/png-icons/Document.png">
+                <img class="img-responsive img center-block" src="img/png-icons/Book.png">
                         <h3>Policy Consultation</h3>
                         <p class="text-muted"></p>
                 </div>
                 <div class="col-xs-12 col-sm-3 text-center">
-                  <img class="img-responsive img center-block" src="img/png-icons/Map.png">
+                  <img class="img-responsive img center-block" src="img/png-icons/Passport.png">
                         <h3>Global Origin & Destination Services</h3>
                         <p class="text-muted"></p>
                 </div>
                 <div class="col-xs-12 col-sm-3 text-center">
-                  <img class="img-responsive img center-block" src="img/png-icons/Home.png">
+                  <img class="img-responsive img center-block" src="img/png-icons/Couch.png">
                         <h3>Household Goods Transport</h3>
                         <p class="text-muted"></p>
 
@@ -331,7 +331,7 @@
                 </div>
                 <div class="col-sm-3 col-xs-12 text-center ">
                     <div class="service-box">
-                      <img class="img-responsive img center-block" src="img/png-icons/Calendar.png">
+                      <img class="img-responsive img center-block" src="img/png-icons/Ship.png">
                         <h3>LTL and FTL Shipments</h3>
                         <p class="text-muted"></p>
 
@@ -339,7 +339,7 @@
                 </div>
                 <div class="col-sm-3 col-xs-12 text-center ">
                     <div class="service-box">
-                      <img class="img-responsive img center-block" src="img/png-icons/Trophy.png">
+                      <img class="img-responsive img center-block" src="img/png-icons/ScienceBubbles.png">
                         <h3>Trade Show</h3>
                         <p class="text-muted"></p>
 
