--- a/kinetix-relocation.html
+++ b/kinetix-relocation.html
@@ -159,12 +159,12 @@
         <div class="container-fluid">
             <div class="row-fluid sr-icons">
                 <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
-                        <img class="img-responsive img center-block" src="img/png-icons/Document.png">
+                        <img class="img-responsive img center-block" src="img/png-icons/Book.png">
                         <h3>Policy Consultation</h3>
                         <p class="text-muted"></p>
                 </div>
                 <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
-                      <img class="img-responsive img center-block" src="img/png-icons/Home.png">
+                      <img class="img-responsive img center-block" src="img/png-icons/Maps2.png">
                         <h3>Origin Services</h3>
                         <p class="text-muted"></p>
                 </div>
@@ -183,7 +183,7 @@
                   </div>
 
                   <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
-                        <img class="img-responsive img center-block" src="img/png-icons/Tag.png">
+                        <img class="img-responsive img center-block" src="img/png-icons/Wallet.png">
                           <h3>Tax & Expense Management</h3>
                           <p class="text-muted"></p>
                   </div>
@@ -242,7 +242,7 @@
         <div class="container-fluid">
             <div class="row-fluid sr-icons">
               <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
-                      <img class="img-responsive img center-block" src="img/png-icons/Document.png">
+                      <img class="img-responsive img center-block" src="img/png-icons/Book.png">
                       <h3>Policy Consultation</h3>
 
               </div>
@@ -252,12 +252,12 @@
 
               </div>
               <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
-                      <img class="img-responsive img center-block" src="img/png-icons/Thumb_Up.png">
+                      <img class="img-responsive img center-block" src="img/png-icons/T-Shirt.png">
                       <h3>Independent Van Line Affiliations</h3>
 
               </div>
               <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
-                      <img class="img-responsive img center-block" src="img/png-icons/Lock.png">
+                      <img class="img-responsive img center-block" src="img/png-icons/Umbrella.png">
                       <h3>Risk Management</h3>
 
               </div>
