--- a/project-logistics.html
+++ b/project-logistics.html
@@ -112,8 +112,8 @@
 
           </div>
           <hr>
-          <div class="row">
-              <div class="col-md-3 text-center">
+          <div class="row-fluid">
+              <div class="col-md-4 text-center">
                   <h3>Route Studies and Consultation</h3>
 
                   <div class="btn">
@@ -138,7 +138,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-md-3 text-center">
+              <div class="col-md-4 text-center">
                   <h3>Rapid Quote Response</h3>
                   <div class="btn">
                       <i class="fa fa-2x fa-plus-circle text-primary" data-toggle="modal" data-target="#modalConsultation2"></i>
@@ -162,7 +162,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-md-3 text-center">
+              <div class="col-md-4 text-center">
                   <h3>Expediting Purchase Orders with Vendors</h3>
                   <div class="btn">
                       <i class="fa fa-2x fa-plus-circle text-primary" data-toggle="modal" data-target="#modalConsultation3"></i>
@@ -186,7 +186,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-md-3 text-center">
+              <div class="col-md-4 text-center">
                   <h3>Export Compliance</h3>
                   <div class="btn">
                       <i class="fa fa-2x fa-plus-circle text-primary" data-toggle="modal" data-target="#modalConsultation4"></i>
@@ -210,7 +210,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-md-3 text-center">
+              <div class="col-md-4 text-center">
                   <h3>Receiving, Inspection and Warehousing</h3>
                   <div class="btn">
                       <i class="fa fa-2x fa-plus-circle text-primary" data-toggle="modal" data-target="#modalConsultation5"></i>
@@ -237,7 +237,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-md-3 text-center">
+              <div class="col-md-4 text-center">
                   <h3>Export Packing and Crating</h3>
                   <div class="btn">
                       <i class="fa fa-2x fa-plus-circle text-primary" data-toggle="modal" data-target="#modalConsultation6"></i>
@@ -261,7 +261,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-md-3 text-center">
+              <div class="col-md-4 text-center">
                   <h3>Freight Forwarding</h3>
                   <div class="btn">
                       <i class="fa fa-2x fa-plus-circle text-primary" data-toggle="modal" data-target="#modalConsultation7"></i>
@@ -288,7 +288,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-md-3 text-center">
+              <div class="col-md-4 text-center">
                   <h3>Reporting and Tracking</h3>
                   <div class="btn">
                       <i class="fa fa-2x fa-plus-circle text-primary" data-toggle="modal" data-target="#modalConsultation8"></i>
@@ -316,7 +316,7 @@
                   </div>
               </div>
 
-              <div class="col-md-3 text-center">
+              <div class="col-md-4 text-center">
                   <h3>Vessels and Aircraft Chartering</h3>
                   <div class="btn">
                       <i class="fa fa-2x fa-plus-circle text-primary" data-toggle="modal" data-target="#modalConsultation9"></i>
@@ -340,7 +340,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-md-3 text-center">
+              <div class="col-md-4 text-center">
                   <h3>Hazmat Transportation</h3>
                   <div class="btn">
                       <i class="fa fa-2x fa-plus-circle text-primary" data-toggle="modal" data-target="#modalConsultation10"></i>
@@ -364,7 +364,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-md-3 text-center">
+              <div class="col-md-4 text-center">
                   <h3>FMS Transportation</h3>
                   <div class="btn">
                       <i class="fa fa-2x fa-plus-circle text-primary" data-toggle="modal" data-target="#modalConsultation11"></i>
@@ -388,7 +388,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-md-3 text-center">
+              <div class="col-md-4 text-center">
                   <h3>Customs Clearance</h3>
                   <div class="btn">
                       <i class="fa fa-2x fa-plus-circle text-primary" data-toggle="modal" data-target="#modalConsultation12"></i>
@@ -412,7 +412,9 @@
                       </div>
                   </div>
               </div>
-              <div class="col-md-3 text-center">
+          </div>
+          <div class="row-fluid textt-center">
+              <div class="col-md-6 text-center">
                   <h3>Last Mile Delivery</h3>
                   <div class="btn">
                       <i class="fa fa-2x fa-plus-circle text-primary" data-toggle="modal" data-target="#modalConsultation13"></i>
@@ -436,7 +438,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-md-3 text-center">
+              <div class="col-md-6 text-center">
                   <h3>Insurance</h3>
                   <div class="btn">
                       <i class="fa fa-2x fa-plus-circle text-primary" data-toggle="modal" data-target="#modalConsultation14"></i>
@@ -460,8 +462,10 @@
                       </div>
                   </div>
               </div>
-
           </div>
+
+
+
       </div>
 
         <div class="parallax-special-projects-2"></div>
